# Hand2WholeBody

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
docs/: CONTRACT.md  results.md  stage3_runbook.md
h2b/: __init__.py  eval.py  inference.py  losses.py  training.py
h2b/data/: __init__.py  arctic_loader.py  dataset.py
h2b/export/: __init__.py  aitviewer_vis.py  footlock.py  to_amass_npz.py  visualize.py
h2b/models/: __init__.py  diffmlp.py  diffusion.py  fk_torch.py  regressor.py  streaming.py
h2b/representations/: __init__.py  body.py  frames.py  rotations.py  rotations_torch.py
h2wb/: eval.py  losses.py  training.py
h2wb/data/: cache.py  dataset.py  pkl_loader.py  smpl_fk.py
h2wb/export/: aitviewer_vis.py  visualize.py
h2wb/models/: diffmlp.py  diffusion.py  fk_torch.py  regressor.py  streaming.py
h2wb/representations/: body.py  frames.py  rotations.py  rotations_torch.py
scripts/: cache_pairs.py  clean_smpl_models.py  compare_models.py  extract_amass.py  footlock_demo.py  footlock_export.py  generate.py  inspect_pkl.py  render_aitviewer.py  render_video.py  setup_env.ps1  train.py
tests/: test_arctic.py  test_body.py  test_cache.py  test_dataset.py  test_eval.py  test_export.py  test_footlock.py  test_frames.py  test_m2.py  test_m4.py  test_m5.py  test_model_smoke.py  test_pkl_loader.py  test_rotations.py  test_smpl_fk.py
